--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,11 +1,13 @@
 ---
-title: "Course 5 - Peer Assignment 1"
+title: "Reproducible Research: Peer Assignment 1"
 author: "MKD"
 date: "Sat, October 18, 2014"
-output: html_document
+output:
+    html_document:
+        keep_md: true
 ---
 
-##1. Loading Data Set
+##1. Loading and Preprocessing the Data
 
 This section deals with data preparation in general.
 
@@ -106,7 +108,7 @@ g <- g + scale_colour_manual(name = "Stats",
 
 **Plot and Results**
 
-```{r, echo = TRUE, warning=FALSE}
+```{r, echo = TRUE, warning=FALSE, fig.width=10}
 
 plot(g)
 
@@ -117,7 +119,7 @@ Median Number of Steps per Day: `r medianSteps1`.
 
 Note that Mean and Median are very close, so only one line is visible in the graph.
 
-##3. Daily Activity Pattern
+##3. Average Daily Activity Pattern
 
 This section examines the number of steps throughout the day.
 
@@ -157,7 +159,7 @@ timeIntervalWithMaxSteps
 **Answer**: The time interval with the maximum average number of steps is 
 `r timeIntervalWithMaxSteps`.
 
-##4. Input Missing Values
+##4. Imputing Missing Values
 
 Note that there are a number of days/intervals where there are missing values 
 (coded as NA). The presence of missing days may introduce bias into some 
@@ -234,6 +236,10 @@ linesDf2 <- data.frame(date = dfStepsByDate2$date,
                       meanSteps = meanSteps2,
                       medianSteps = medianSteps2)
 
+```
+
+```{r, echo = TRUE, warning=FALSE, fig.width = 10}
+
 # Plot histogram
 
 library(ggplot2)
@@ -282,7 +288,7 @@ The results for "NAs removed" are very close to the results for "NAs implied".
 At least with the method chosen (steps for NAs are implied by mean of steps 
 for same interval in time)
 
-##5. Pattern Differences - Weekdays vs. Weekends
+##5. Are there Differences in Activity Patterns - Weekdays vs. Weekends
 
 **Assignment:**
 
@@ -314,7 +320,7 @@ weekendSteps <- dfStepsByTimeInterval3[dfStepsByTimeInterval3$isWeekday == FALSE
 
 ```{r, echo=TRUE, fig.height = 12.0, fig.width = 10.0}
 # dimensions:
-# Height = 14.0 - this is 14 inches, 2 * the default of 7 inches. Values: Numeric, with decimal!
+# Height = 12.0 - this is 12 inches. Values: Numeric, with decimal!
 # Width = 10.0 - this is 10 inches, a bit wider than the default to accommodate time series
 
 # panel of two plots: one above the other
@@ -347,10 +353,10 @@ There are clear differences between activity on weekends and activity on weekday
 
 Here are the differences by range of time interval:  
 
-500 to 800: Weekdays have more activity, weekends have none  
-800 to 1000: both have spikes, but weekdays spike is higher  
-1000 to 2000: weekend activity is higher than weekend activity  
-2000+: both have very little activity. Weekend activity last a little longer, 
+**500 to 800**: Weekdays have more activity, weekends have none  
+**800 to 1000**: both have spikes, but weekdays spike is higher  
+**1000 to 2000**: weekend activity is higher than weekend activity  
+**2000+**: both have very little activity. Weekend activity last a little longer, 
 and into the 2000+ interval  
 
 
