--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -114,8 +114,20 @@ plot(g)
 
 ```
 
-Mean Number of Steps per Day: `r meanSteps1`.  
-Median Number of Steps per Day: `r medianSteps1`.
+Mean Number of Steps per Day:
+```{r}
+meanStepsFmtd <- format(meanSteps1, format = "f", big.mark=",", digits = 2)
+meanStepsFmtd
+```
+
+Median Number of Steps per Day:
+```{r}
+medianStepsFmtd <- format(medianSteps1, format = "f", big.mark=",", digits = 2)
+medianStepsFmtd
+```
+
+Mean Number of Steps per Day: `r meanStepsFmtd`.  
+Median Number of Steps per Day: `r medianStepsFmtd`.
 
 Note that Mean and Median are very close, so only one line is visible in the graph.
 
@@ -132,6 +144,7 @@ and the average number of steps taken, averaged across all days (y-axis)
 
 
 ```{r, echo=TRUE, fig.width = 10.0, fig.height = 6.0}
+
 library(reshape2)
 dfMelt <- melt(dfComplete, id = "interval", measure.vars = "steps")
 dfStepsByTimeInterval <- dcast(dfMelt, interval ~ variable, mean)
@@ -140,6 +153,7 @@ plot(dfStepsByTimeInterval,
      main = "Number of Steps Throughout the Day",
      xlab= "Time Interval",
      ylab = "Average Number of Steps (Across All Days)")
+
 ```
 
 
@@ -151,9 +165,11 @@ in the dataset, contains the maximum number of steps?
 **Code**:
   
 ```{r}
+
 indexOfMax <- which.max(dfStepsByTimeInterval$steps)
 timeIntervalWithMaxSteps <- dfStepsByTimeInterval$interval[indexOfMax]
 timeIntervalWithMaxSteps
+
 ```
 
 **Answer**: The time interval with the maximum average number of steps is 
@@ -168,13 +184,20 @@ calculations or summaries of the data.
 **Problem 4.1:** Total Number of rows with missing values ("NA")
 
 ```{r}
+
 origRows <- nrow(df)
 completeRows <- nrow(dfComplete)
 naRows <- origRows - completeRows
 naRows
+
+naProportion <- naRows * 1.0 / origRows * 100 # these are percent
+naProportionFormatted <- paste(format(x = naProportion, digits = 2), "%", sep = "")
+naProportionFormatted
+
 ```
 
-**Answer:** `r naRows` rows out of `r origRows` rows have missing values ("NA")
+**Answer:** `r naRows` rows out of `r origRows` rows have missing values ("NA"). 
+This is a proportion of `r naProportionFormatted`.
 
 **Problem 4.2:** Devise a strategy for filling in all of the missing values in the dataset. 
 The strategy does not need to be sophisticated. For example, you could use the 
@@ -182,10 +205,10 @@ mean/median for that day, or the mean for that 5-minute interval, etc.
 
 **Answer:** The strategy is the following:
 
-For every point in time where steps = NA:
-We replace the steps with the average number of steps 
-for that same interval in time 
-averaging across all days where this interval has non-NA steps.
+For data point where steps = NA:  
++ We take the data points time interval ('interval')
++ We look up the average steps at that time interval, in the time series above
++ we replace 'NA' with that average number of steps
 
 **Code:**
 
@@ -193,7 +216,12 @@ averaging across all days where this interval has non-NA steps.
 
 # a function to calculate the default value for steps, by time interval
 defaultSteps <- function(interval) {
+    # in the time series of average steps per interval
+    # find the interval that matches 'interval' in the function input
     matchedIndex <- match(interval, dfStepsByTimeInterval$interval)
+    
+    # return the average number of steps from the time series
+    # at that time interval
     matchedSteps <- dfStepsByTimeInterval$steps[matchedIndex]
     matchedSteps
 }
@@ -269,24 +297,52 @@ g2 <- g2 + scale_colour_manual(name = "Stats",
 
 plot(g2)
 
+```
 
+Mean Number of Steps per Day:
+```{r}
+meanStepsFmtd2 <- format(meanSteps2, format = "f", big.mark=",", digits = 2)
+meanStepsFmtd2
+```
+
+Median Number of Steps per Day:
+```{r}
+medianStepsFmtd2 <- format(medianSteps2, format = "f", big.mark=",", digits = 2)
+medianStepsFmtd2
 ```
 
 
-Mean Number of Steps per Day: `r meanSteps2`.  
-Median Number of Steps per Day: `r medianSteps2`.
+Mean Number of Steps per Day: `r meanStepsFmtd2`.  
+Median Number of Steps per Day: `r medianStepsFmtd2`.
 
 Note that the computed values for Mean and Median are virtually identical, 
 so only one line is visible in the plot.
 
 **Comparison to Calculation that removed NA's**
 
-Mean Number of Steps per Day (NA removed): `r meanSteps1`.  
-Median Number of Steps per Day (NA removed): `r medianSteps1`.
+Mean Number of Steps per Day (NA removed): `r meanStepsFmtd`.  
+Median Number of Steps per Day (NA removed): `r medianStepsFmtd`.
 
 The results for "NAs removed" are very close to the results for "NAs implied".  
 At least with the method chosen (steps for NAs are implied by mean of steps 
 for same interval in time)
+
+**Why is there virtually no change, when imputing values?**  
+
+The reason is, that in this dataset:  
+For each day in the 2 months, all intervals have either steps = NA, or steps not NA.  
+There is no day with some intervals having steps, and other intervals not having steps.
+
+This means:
+
+* non-NA days have nothing replaced, for no interval, so they keep each step, 
+and they keep the same number of total steps
+* NA days are completely imputed, for every interval. this means, for every interval 
+they get the average number of steps. The total sum of steps will also be the 
+average number of steps of all days.
+
+This means, when expanding the non-NA days with the NA days, the mean doesn't change.
+The median does change, and it would move closer to the mean.
 
 ##5. Are there Differences in Activity Patterns - Weekdays vs. Weekends
 
